<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_sort_by_stars"
        android:title="Sort by stars"/>

    <item
        android:id="@+id/mi_sort_by_name"
        android:title="Sort by name"/>

</menu>