...
            android:text="@string/trending"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="onCreatePopupMenu"
            android:contentDescription="@string/menu_icon_on_right_top"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trending_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:adapter="@{adapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/trending_repos_list_item" />

...
