package com.practice;

import android.content.Intent;
import android.util.Log;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import com.practice.data.repositories.TrendingRepoRepository;
import com.practice.ui.activities.TrendingReposActivity;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import okhttp3.mockwebserver.MockResponse;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static com.practice.RecyclerViewMatcher.withRecyclerView;
import static org.hamcrest.Matchers.allOf;

/**
 * TrendingReposActivity Tests
 *
 * Scope :
 *
 * 1. See if title Trending is displayed properly
 *
 * 2. See if option menu is there at the top right and is clickable
 *    and carries sort by name and sort by stars option in it.
 *
 * 3. Mock network response and get the list displayed (TODO)
 *
 * 4. See if top list item is clickable and got expanded
 *
 * 5. Tap same child again. It should collapse back.
 *
 */
@LargeTest
@RunWith(AndroidJUnit4.class)
public class TrendingReposActivityTest extends MockWebServerClient {

    private static final String TAG = "TrendingReposActivityTe";

    @Rule
    public ActivityTestRule<TrendingReposActivity> mTrendingReposActivityTestRule = new ActivityTestRule<TrendingReposActivity>(TrendingReposActivity.class, true, false);

    @Before
    public void setup() {

        Log.d(TAG, "setup() called");
        mServer.enqueue(getTrendingRepoMockResponse());

        // We should have injected using Dagger.
        // I need more time here to explore that
        // See MockTrendingReposViewModelModule
        // Will come back later on this part. TODO

//        DaggerTrendingReposActivityComponents.builder()
//                .trendingReposListAdapterModule(new TrendingReposListAdapterModule((LayoutInflater) mTrendingReposActivityTestRule.getActivity().getSystemService(LAYOUT_INFLATER_SERVICE)))
//                .trendingReposViewModelModule(new MockTrendingReposViewModelModule(mTrendingReposActivityTestRule.getActivity(), getMockUrl()))
//                .build()
//                .inject(mTrendingReposActivityTestRule.getActivity());

        Intent intent = new Intent(Intent.ACTION_MAIN);
        intent.putExtra(TrendingRepoRepository.EXTRA_BASE_URL, getMockUrl());

        mTrendingReposActivityTestRule.launchActivity(intent);
    }

    @Test
    public void checkTitleIsDisplayed() {
        onView(allOf(withText("Trending"), isDisplayed()));
    }

    @Test
    public void checkPopupOptions() {
        ViewInteraction appCompatImageView = onView(allOf(withId(R.id.iv_menu),
                withContentDescription("Menu icon on right top"), isDisplayed()));

        appCompatImageView.perform(click());

        ViewInteraction sortByStars = onView(allOf(withId(R.id.title), withText("Sort by stars"), isDisplayed()));

        sortByStars.perform(click());

        appCompatImageView.perform(click());

        ViewInteraction sortByName = onView(allOf(withId(R.id.title), withText("Sort by name"), isDisplayed()));

        sortByName.perform(click());

    }

    @Test
    public void checkListItemExpansionCollapse() throws Exception {

        // Just hold on for a second
        Thread.sleep(1000);

        // Check if list is displayed
        onView(allOf(withId(R.id.rv_trending_list), isDisplayed()));

        // Wait for little more for adapter to pop results
        Thread.sleep(1000);

        // Check if list item is expanded. We can do that by checking description text visibility
        onView(childAtPosition(childAtPosition(withRecyclerView(R.id.rv_trending_list).atPosition(0), 0),3)).check(doesNotExist());

        // Click on first item
        onView(withRecyclerView(R.id.rv_trending_list).atPosition(0)).perform(click());

        // See if it got expanded
        onView(allOf(childAtPosition(childAtPosition(withRecyclerView(R.id.rv_trending_list).atPosition(0), 0),3), isDisplayed()));

        // Click on same item again
        onView(withRecyclerView(R.id.rv_trending_list).atPosition(0)).perform(click());

        // See if it got collapsed
        onView(childAtPosition(childAtPosition(withRecyclerView(R.id.rv_trending_list).atPosition(0), 0),3)).check(doesNotExist());
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }

    private static MockResponse getTrendingRepoMockResponse() {
        MockResponse response = new MockResponse();
        response.setResponseCode(200);
        response.setBody(getTrendingRepoMockResponseString());
        response.setHeader("content-type", "application/json; charset=utf-8");
        response.setHeader("etag", "W/\"52c7-rCMVBmD3AYUD1frabnDonaBHho0\"");
        response.setHeader("cache-control", "max-age=120");
        return response;
    }

    private static String getTrendingRepoMockResponseString() {
